<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fffdfd"
        android:orientation="vertical"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:paddingBottom="15dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:showDividers="middle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open"
            android:id="@+id/openButton"
            style="@style/LongPressDialogFont" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:id="@+id/shareButton"
            style="@style/LongPressDialogFont" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/deleteButton"
            style="@style/LongPressDialogFont" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rename"
            android:id="@+id/renameButton"
            style="@style/LongPressDialogFont" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy"
            android:id="@+id/copyButton"
            style="@style/LongPressDialogFont" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move"
            android:id="@+id/moveButton"
            style="@style/LongPressDialogFont" />



    </LinearLayout>


</RelativeLayout >